// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favourite city list add city 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="part"
    >
      Избранное
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        name="city"
        placeholder="Введите название города..."
        type="text"
      />
      <button
        className="itemsButton"
        type="submit"
      >
        +
      </button>
    </form>
  </div>
  <div
    className="items"
  >
    <div
      className="loader"
    >
      <div
        className="header"
      >
        <b>
          moscow
        </b>
        <span
          className="item-temp"
        >
          276.91 ℃
        </span>
        <img
          alt="img"
          className="item-icon"
          src="//openweathermap.org/img/wn/04d@2x.png"
        />
        <button
          className="itemsButton"
          id="moscow"
          onClick={[Function]}
        >
          x
        </button>
      </div>
      <div
        className="item-entry"
      >
        <ul>
          <li>
            <span>
              Ветер
            </span>
             
            <em>
              6
               м/c
            </em>
          </li>
          <li>
            <span>
              Облачность
            </span>
             
            <em>
              overcast clouds
            </em>
          </li>
          <li>
            <span>
              Давление
            </span>
             
            <em>
              1016
               гПа
            </em>
          </li>
          <li>
            <span>
              Влажность
            </span>
             
            <em>
              80
               %
            </em>
          </li>
          <li>
            <span>
              Координаты
            </span>
             
            <em>
              [
              30.32
              , 
              59.94
              ]
            </em>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="loader"
    >
      <div
        className="header"
      >
        <b>
          omsk
        </b>
        <span
          className="item-temp"
        >
          276.91 ℃
        </span>
        <img
          alt="img"
          className="item-icon"
          src="//openweathermap.org/img/wn/04d@2x.png"
        />
        <button
          className="itemsButton"
          id="omsk"
          onClick={[Function]}
        >
          x
        </button>
      </div>
      <div
        className="item-entry"
      >
        <ul>
          <li>
            <span>
              Ветер
            </span>
             
            <em>
              6
               м/c
            </em>
          </li>
          <li>
            <span>
              Облачность
            </span>
             
            <em>
              overcast clouds
            </em>
          </li>
          <li>
            <span>
              Давление
            </span>
             
            <em>
              1016
               гПа
            </em>
          </li>
          <li>
            <span>
              Влажность
            </span>
             
            <em>
              80
               %
            </em>
          </li>
          <li>
            <span>
              Координаты
            </span>
             
            <em>
              [
              30.32
              , 
              59.94
              ]
            </em>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="loader"
    >
      <div
        className="header"
      >
        <b>
          New
        </b>
        <span
          className="item-temp"
        >
          276.91 ℃
        </span>
        <img
          alt="img"
          className="item-icon"
          src="//openweathermap.org/img/wn/04d@2x.png"
        />
        <button
          className="itemsButton"
          id="New"
          onClick={[Function]}
        >
          x
        </button>
      </div>
      <div
        className="item-entry"
      >
        <ul>
          <li>
            <span>
              Ветер
            </span>
             
            <em>
              6
               м/c
            </em>
          </li>
          <li>
            <span>
              Облачность
            </span>
             
            <em>
              overcast clouds
            </em>
          </li>
          <li>
            <span>
              Давление
            </span>
             
            <em>
              1016
               гПа
            </em>
          </li>
          <li>
            <span>
              Влажность
            </span>
             
            <em>
              80
               %
            </em>
          </li>
          <li>
            <span>
              Координаты
            </span>
             
            <em>
              [
              30.32
              , 
              59.94
              ]
            </em>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Favourite city list add city with not found error 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="part"
    >
      Избранное
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        name="city"
        placeholder="Введите название города..."
        type="text"
      />
      <button
        className="itemsButton"
        type="submit"
      >
        +
      </button>
    </form>
  </div>
  <div
    className="items"
  >
    <div
      className="loader"
    >
      <div
        className="header"
      >
        <b>
          moscow
        </b>
        <span
          className="item-temp"
        >
          276.91 ℃
        </span>
        <img
          alt="img"
          className="item-icon"
          src="//openweathermap.org/img/wn/04d@2x.png"
        />
        <button
          className="itemsButton"
          id="moscow"
          onClick={[Function]}
        >
          x
        </button>
      </div>
      <div
        className="item-entry"
      >
        <ul>
          <li>
            <span>
              Ветер
            </span>
             
            <em>
              6
               м/c
            </em>
          </li>
          <li>
            <span>
              Облачность
            </span>
             
            <em>
              overcast clouds
            </em>
          </li>
          <li>
            <span>
              Давление
            </span>
             
            <em>
              1016
               гПа
            </em>
          </li>
          <li>
            <span>
              Влажность
            </span>
             
            <em>
              80
               %
            </em>
          </li>
          <li>
            <span>
              Координаты
            </span>
             
            <em>
              [
              30.32
              , 
              59.94
              ]
            </em>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="loader"
    >
      <div
        className="header"
      >
        <b>
          omsk
        </b>
        <span
          className="item-temp"
        >
          276.91 ℃
        </span>
        <img
          alt="img"
          className="item-icon"
          src="//openweathermap.org/img/wn/04d@2x.png"
        />
        <button
          className="itemsButton"
          id="omsk"
          onClick={[Function]}
        >
          x
        </button>
      </div>
      <div
        className="item-entry"
      >
        <ul>
          <li>
            <span>
              Ветер
            </span>
             
            <em>
              6
               м/c
            </em>
          </li>
          <li>
            <span>
              Облачность
            </span>
             
            <em>
              overcast clouds
            </em>
          </li>
          <li>
            <span>
              Давление
            </span>
             
            <em>
              1016
               гПа
            </em>
          </li>
          <li>
            <span>
              Влажность
            </span>
             
            <em>
              80
               %
            </em>
          </li>
          <li>
            <span>
              Координаты
            </span>
             
            <em>
              [
              30.32
              , 
              59.94
              ]
            </em>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="loader"
    >
      <b>
        Ошибка
      </b>
      <i>
        Город Error не найден
      </i>
    </div>
  </div>
</div>
`;

exports[`Favourite city list delete city 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="part"
    >
      Избранное
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        name="city"
        placeholder="Введите название города..."
        type="text"
      />
      <button
        className="itemsButton"
        type="submit"
      >
        +
      </button>
    </form>
  </div>
  <div
    className="items"
  >
    <div
      className="loader"
    >
      <div
        className="header"
      >
        <b>
          omsk
        </b>
        <span
          className="item-temp"
        >
          276.91 ℃
        </span>
        <img
          alt="img"
          className="item-icon"
          src="//openweathermap.org/img/wn/04d@2x.png"
        />
        <button
          className="itemsButton"
          id="omsk"
          onClick={[Function]}
        >
          x
        </button>
      </div>
      <div
        className="item-entry"
      >
        <ul>
          <li>
            <span>
              Ветер
            </span>
             
            <em>
              6
               м/c
            </em>
          </li>
          <li>
            <span>
              Облачность
            </span>
             
            <em>
              overcast clouds
            </em>
          </li>
          <li>
            <span>
              Давление
            </span>
             
            <em>
              1016
               гПа
            </em>
          </li>
          <li>
            <span>
              Влажность
            </span>
             
            <em>
              80
               %
            </em>
          </li>
          <li>
            <span>
              Координаты
            </span>
             
            <em>
              [
              30.32
              , 
              59.94
              ]
            </em>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Favourite city list rendering 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="part"
    >
      Избранное
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        name="city"
        placeholder="Введите название города..."
        type="text"
      />
      <button
        className="itemsButton"
        type="submit"
      >
        +
      </button>
    </form>
  </div>
  <div
    className="items"
  >
    <div
      className="loader"
    >
      <div
        className="header"
      >
        <b>
          moscow
        </b>
        <span
          className="item-temp"
        >
          276.91 ℃
        </span>
        <img
          alt="img"
          className="item-icon"
          src="//openweathermap.org/img/wn/04d@2x.png"
        />
        <button
          className="itemsButton"
          id="moscow"
          onClick={[Function]}
        >
          x
        </button>
      </div>
      <div
        className="item-entry"
      >
        <ul>
          <li>
            <span>
              Ветер
            </span>
             
            <em>
              6
               м/c
            </em>
          </li>
          <li>
            <span>
              Облачность
            </span>
             
            <em>
              overcast clouds
            </em>
          </li>
          <li>
            <span>
              Давление
            </span>
             
            <em>
              1016
               гПа
            </em>
          </li>
          <li>
            <span>
              Влажность
            </span>
             
            <em>
              80
               %
            </em>
          </li>
          <li>
            <span>
              Координаты
            </span>
             
            <em>
              [
              30.32
              , 
              59.94
              ]
            </em>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="loader"
    >
      <div
        className="header"
      >
        <b>
          omsk
        </b>
        <span
          className="item-temp"
        >
          276.91 ℃
        </span>
        <img
          alt="img"
          className="item-icon"
          src="//openweathermap.org/img/wn/04d@2x.png"
        />
        <button
          className="itemsButton"
          id="omsk"
          onClick={[Function]}
        >
          x
        </button>
      </div>
      <div
        className="item-entry"
      >
        <ul>
          <li>
            <span>
              Ветер
            </span>
             
            <em>
              6
               м/c
            </em>
          </li>
          <li>
            <span>
              Облачность
            </span>
             
            <em>
              overcast clouds
            </em>
          </li>
          <li>
            <span>
              Давление
            </span>
             
            <em>
              1016
               гПа
            </em>
          </li>
          <li>
            <span>
              Влажность
            </span>
             
            <em>
              80
               %
            </em>
          </li>
          <li>
            <span>
              Координаты
            </span>
             
            <em>
              [
              30.32
              , 
              59.94
              ]
            </em>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
